# shuttle-fullstack-rust-example

backend/: Cargo.toml  build.rs
backend/src/: assets.rs  main.rs
